cloud/k8s/backend/wp-bitnami/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-bitnami
  namespace: bitnami
spec:
  selector:
    matchLabels:
      app: wp-bitnami
  template:
    metadata:
      labels:
        app: wp-bitnami
        component: workload
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 4
        fsGroup: 33
      volumes:
      - name: wp-bitnami-persistent-storage
        persistentVolumeClaim:
          claimName: wp-bitnami-pv-claim
      containers:
      - name: wp-bitnami
        image: bitnami/wordpress:6
        volumeMounts:
        - name: wp-bitnami-persistent-storage
          mountPath: /bitnami/wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wp-bitnami
  namespace: bitnami
spec:
  selector:
    app: wp-bitnami
  type: ClusterIP
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wp-bitnami
  labels:
    app: wp-bitnami
    component: route
spec:
  parentRefs:
  - name: web-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "wp-bitnami.jsx.jp"
  - "wp-bitnami.x.jsx.jp"
  rules:
  - backendRefs:
    - name: wp-bitnami
      port: 80
